@@ -1,0 +1,90 @@
+.TH G-EGG 1 BRL-CAD
+.\"                        G - E G G . 1
+.\" BRL-CAD
+.\"
+.\" Copyright (c) 2005-2009 United States Government as represented by
+.\" the U.S. Army Research Laboratory.
+.\"
+.\" Redistribution and use in source (Docbook format) and 'compiled'
+.\" forms (PDF, PostScript, HTML, RTF, etc), with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\"
+.\" 1. Redistributions of source code (Docbook format) must retain the
+.\" above copyright notice, this list of conditions and the following
+.\" disclaimer.
+.\"
+.\" 2. Redistributions in compiled form (transformed to other DTDs,
+.\" converted to PDF, PostScript, HTML, RTF, and other formats) must
+.\" reproduce the above copyright notice, this list of conditions and
+.\" the following disclaimer in the documentation and/or other
+.\" materials provided with the distribution.
+.\"
+.\" 3. The name of the author may not be used to endorse or promote
+.\" products derived from this documentation without specific prior
+.\" written permission.
+.\"
+.\" THIS DOCUMENTATION IS PROVIDED BY THE AUTHOR AS IS'' AND ANY
+.\" EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+.\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+.\" PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+.\" ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
+.\" OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
+.\" BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+.\" LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+.\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
+.\" USE OF THIS DOCUMENTATION, EVEN IF ADVISED OF THE POSSIBILITY OF
+.\" SUCH DAMAGE.
+.\"
+.\".\".\"
+.SH NAME
+g-egg \- Panda3D Translator (BRL-CAD to EGG)
+.SH SYNOPSIS
+.B g-egg [-v][-i] [-xX lvl]
+[-D calculation_tolerance ]
+[-a abs_tol] [-r rel_tol] [-n norm_tol] [-o EGG_file] database.g object(s)
+.SH DESCRIPTION
+.I g-egg\^
+converts the specified
+.I object(s)
+from a BRL-CAD
+.I database.g
+file to the
+.I panda3d
+file format.
+The
+.I -x
+option specifies an RT debug flag and the
+.I -X
+option specifies an NMG debug flag. The
+.I -a
+,
+.I -r
+, and
+.I -n
+options specifiy tesselation tolerances.
+The
+.I -D
+option specifies a calculational distance tolerance (mm). Any two vertices
+that are less than this distance apart will be treated as the same vertex.
+The
+.I -v
+option requests verbose output.
+The
+.I -i
+option requests the output file units to be inches (the default is mm).
+The
+The
+.I -o
+option specifies the name of the file to receive the output
+(stdout is the default).
+.SH EXAMPLE
+.RS
+$ \|\fIg-egg \|-o sample.egg \|sample.g \|sample_object\fP
+.RE
+.SH DIAGNOSTICS
+Error messages are intended to be self-explanatory.
+.SH "BUG REPORTS"
+Reports of bugs or problems should be submitted via electronic
+mail to <devs@brlcad.org>.
