@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2009-06-XX  Release 7.14.10                                    ---
 ----------------------------------------------------------------------
 
+* added experimental exporter to Panda3d EGG format - Erik Greenwald
 * fixed compilation support for Mac OS X 10.5 - Sean Morrison
 * add bbsize command to report bounding box size - Cliff Yapp
 * reordering of and additions to Archer button menu - Cliff Yapp
